--- a/.settings/projcfg.ini
+++ b/.settings/projcfg.ini
@@ -1,19 +1,19 @@
 #RT-Thread Studio Project Configuration
-#Tue Jan 25 11:12:04 EET 2022
+#Sat Feb 05 16:28:51 CET 2022
 cfg_version=v3.0
 board_name=QEMU-VEXPRESS-A9
 example_name=
 hardware_adapter=QEMU
-project_type=rt-thread
 board_base_nano_proj=False
+project_type=rt-thread
 chip_name=
-selected_rtt_version=4.0.2
 bsp_version=1.0.5
+selected_rtt_version=4.0.2
 os_branch=full
-output_project_path=C\:/RT-ThreadStudio/workspace
-is_base_example_project=False
-is_use_scons_build=True
 project_base_bsp=true
+is_use_scons_build=True
+is_base_example_project=False
+output_project_path=C\:\\RT-ThreadStudio\\workspace\\sps
 project_name=sps
-os_version=4.0.2
 bsp_path=repo/Extract/Board_Support_Packages/RealThread/QEMU-VEXPRESS-A9/1.0.5
+os_version=4.0.2
